--- a/package.json
+++ b/package.json
@@ -10,5 +10,17 @@
     "js-cookie": "^2.2.0",
     "markdown-it": "^11.0.1",
     "reconnecting-websocket": "^4.1.10"
+  },
+  "devDependencies": {
+    "@popperjs/core": "^2.6.0",
+    "@types/bootstrap": "^5.0.4",
+    "@types/jquery": "^3.5.5",
+    "@types/jqueryui": "^1.12.14",
+    "@types/js-cookie": "^2.2.6",
+    "@types/markdown-it": "^12.0.1",
+    "@types/punycode": "^2.1.0",
+    "@types/reconnectingwebsocket": "^1.0.6",
+    "popper.js": "^1.16.0",
+    "typescript": "^4.1.3"
   }
 }
