--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.6.0",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
     "@types/bootstrap": "^5.0.4",
+    "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
     "@types/jqueryui": "^1.12.14",
     "@types/js-cookie": "^2.2.6",
     "@types/markdown-it": "^12.0.1",
     "@types/punycode": "^2.1.0",
     "@types/reconnectingwebsocket": "^1.0.6",
+    "jest": "^26.6.3",
     "popper.js": "^1.16.0",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
 }
