--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.6.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-inject": "^4.0.2",
+    "@rollup/plugin-multi-entry": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@types/bootstrap": "^5.0.4",
@@ -25,6 +29,7 @@
     "@types/reconnectingwebsocket": "^1.0.6",
     "jest": "^26.6.3",
     "popper.js": "^1.16.0",
+    "rollup": "^2.38.3",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
