--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./static/js",
+    "outDir": "./frontend/js",
 	"baseUrl": "./",
     "allowJs": true,
     "target": "es6",
@@ -10,10 +10,6 @@
 		"dom",
 		"es7"
 	],
-	"paths": {
-		"/static/libs/*": ["node_modules/*"],
-		"@src/*": ["static/ts/*"]
-	}
   },
-  "include": ["./static/ts/**/*"]
+  "include": ["./frontend/ts/**/*"]
 }
