--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^26.6.3",
     "popper.js": "^1.16.0",
     "rollup": "^2.38.3",
+    "sass": "^1.32.5",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
