--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup": "^2.38.3",
     "sass": "^1.32.5",
     "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "uglify-js": "^3.12.6"
   }
 }
