--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raveberry",
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": "^4.3.1",
@@ -34,5 +34,14 @@
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3",
     "uglify-js": "^3.12.6"
+  },
+  "scripts": {
+	  "js": "tsc && rollup -c && uglifyjs bundle.js --compress --mangle -o ../static/bundle.js",
+	  "css": "sass scss/light.scss ../static/light.css && sass scss/dark.scss ../static/dark.css",
+	  "fonts": "cp node_modules/@fortawesome/fontawesome-free/webfonts/*.woff2 ../static/",
+	  "watch-js": "rm -f ../static/bundle.js && touch bundle.js && ln bundle.js ../static/bundle.js && tsc --watch & rollup -c --watch",
+	  "watch-css": "sass --watch scss/dark.scss ../static/dark.css",
+	  "test": "jest",
+	  "build": "yarn js && yarn css && yarn fonts"
   }
 }
