--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 
 before_script:
   - yarn --cwd frontend build
-  - docker build -f docker/tests.Dockerfile -t raveberry-test .
+  # - docker build -f docker/tests.Dockerfile -t raveberry-test .
 
 script:
   - yarn --cwd frontend test
