--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   # https://cryptography.io/en/latest/installation.html
   - sudo apt-get install build-essential libssl-dev libffi-dev python3-dev rustc cargo
   - pip3 install -r requirements/common.txt
+  - python3 -m django version
   - yarn --cwd frontend install
 
 before_script:
