check install pip packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ install:
   # https://cryptography.io/en/latest/installation.html
   - sudo apt-get install build-essential libssl-dev libffi-dev python3-dev rustc cargo
   - pip3 install -r requirements/common.txt
-  - python -c "import sys; print(sys.executable)"
-  - python3 -c "import sys; print(sys.executable)"
+  - pip freeze
+  - pip3 freeze
+  - python -m pip freeze
+  - python3 -m pip freeze
   - yarn --cwd frontend install
 
 before_script:
